@@ -1,7 +1,7 @@
-/*	$eterna: auth-bozo.c,v 1.16 2010/05/10 14:36:37 mrg Exp $	*/
+/*	$eterna: auth-bozo.c,v 1.17 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2010 Matthew R. Green
+ * Copyright (c) 1997-2011 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
