@@ -1,6 +1,6 @@
 #! /bin/sh
 #
-#	$eterna: html_cmp,v 1.8 2003/02/06 09:40:39 mrg Exp $
+#	$eterna: html_cmp,v 1.9 2011/11/17 22:18:02 mrg Exp $
 #
 # like cmp(1) but compares to files after making their `Date: ' headers
 # the same, to allow `now' and `then' to work properly.  it also tries
@@ -17,11 +17,11 @@ sedcmd="s/^Date: .*/Date: nowish/;
 	s/^Server: .*/^Server: bozotic HTTP server version 5.08/;
 	s/^Content-Length: .*/Content-Length: 223/;"
 
-sed -e "$sedcmd" < $1 > f1.tmp.$$
-sed -e "$sedcmd" < $2 > f2.tmp.$$
+sed -e "$sedcmd" < "$1" > "f1.tmp.$$"
+sed -e "$sedcmd" < "$2" > "f2.tmp.$$"
 
-cmp -s f1.tmp.$$ f2.tmp.$$
+cmp -s "f1.tmp.$$" "f2.tmp.$$"
 rv=$?
-rm -f f1.tmp.$$ f2.tmp.$$
+rm -f "f1.tmp.$$" "f2.tmp.$$"
 
 exit $rv
